[tool.poetry]
name = "radiofreq-lib"
version = "0.1.0"
description = "A set of RF-engineering functions."
authors = ["murenkov <yaroslav.murenkov@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
